RESOLVED FIXED89402
RenderLayerBacking sometimes doesn't attach scrollbars to graphics layer tree
https://bugs.webkit.org/show_bug.cgi?id=89402
Summary RenderLayerBacking sometimes doesn't attach scrollbars to graphics layer tree
Adrienne Walker
Reported 2012-06-18 16:43:48 PDT
RenderLayerBacking sometimes doesn't attach scrollbars to graphics layer tree
Attachments
Patch (6.47 KB, patch)
2012-06-18 17:32 PDT, Adrienne Walker
no flags
Adrienne Walker
Comment 1 2012-06-18 17:32:38 PDT
Adrienne Walker
Comment 2 2012-06-18 17:34:23 PDT
In some cases, a scrollbar graphics layer gets created in RenderLayerBacking but it doesn't get attached to the graphics layer tree. This causes the scrollbar to disappear. See: http://code.google.com/p/chromium/issues/detail?id=129186 for a test case, or the test included in the first patch above.
Simon Fraser (smfr)
Comment 3 2012-06-18 17:51:58 PDT
I don't think it updates scrollbar geometry properly either.
Adrienne Walker
Comment 4 2012-06-18 17:55:30 PDT
(In reply to comment #3) > I don't think it updates scrollbar geometry properly either. I'm not sure I see what you're pointing out. Which code are you referring to?
Simon Fraser (smfr)
Comment 5 2012-06-18 18:06:00 PDT
Never mind, thinking of another bug that I can't currently find.
WebKit Review Bot
Comment 6 2012-06-18 20:05:08 PDT
Comment on attachment 148208 [details] Patch Clearing flags on attachment: 148208 Committed r120661: <http://trac.webkit.org/changeset/120661>
WebKit Review Bot
Comment 7 2012-06-18 20:05:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.