RenderLayerBacking sometimes doesn't attach scrollbars to graphics layer tree https://bugs.webkit.org/show_bug.cgi?id=89402

Reviewed by James Robinson.

Source/WebCore:

RenderLayerBacking only attaches scrollbar layers to the graphics
layer tree if there's a clip layer. This is wrong, because these
scrollbars become orphans and other code expects them to handle
repainting the scrollbars (which now become invisible). Fix by always
attaching scrollbar layers.

Test: compositing/overflow/image-load-overflow-scrollbars.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateInternalHierarchy):

LayoutTests:

Add a test where an image load creates overflow.

* compositing/overflow/image-load-overflow-scrollbars-expected.png: Added.
* compositing/overflow/image-load-overflow-scrollbars-expected.txt: Added.
* compositing/overflow/image-load-overflow-scrollbars.html: Added.


Canonical link: https://commits.webkit.org/107271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120661 268f45cc-cd09-0410-ab3c-d52691b4dbfc